--- a/src/components/Reports/styles.css
+++ b/src/components/Reports/styles.css
@@ -200,6 +200,13 @@
   font-weight: 600;
   color: #d32f2f;
 }
+:where(.css-dev-only-do-not-override-1c0na6j).ant-picker-outlined:hover {
+  border-color: #25a17d !important;
+}
+.reports_monthlypicker:hover
+  :where(.css-dev-only-do-not-override-1c0na6j).ant-picker-outlined:hover {
+  border-color: #25a17d !important;
+}
 /* monthlyinandout styles */
 .monthlyInOuttime_text {
   color: rgb(20, 184, 166);
