--- a/src/components/Attendance/styles.css
+++ b/src/components/Attendance/styles.css
@@ -39,11 +39,31 @@
   border-radius: 8px;
   color: rgb(20, 184, 166);
 }
+.attendancedetail_employeelistCalender {
+  border: 0.5px solid #abb3b36e;
+  margin-top: 12px;
+  border-radius: 6px;
+}
 .attendancedetail_employeelistCalender .ant-radio-group {
   display: none;
 }
 .apexcharts-tooltip-custom {
   padding: 12px;
+}
+.attendancedetail_userattendancetableColumnContainer {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 9px;
+}
+.attendancedetail_userattendancetableheading {
+  font-size: 15px;
+  font-weight: 500;
+}
+.attendancedetail_userattendanceDivider {
+  margin: 0 !important;
+  margin-top: 0px !important;
+  background: #abb3b36e;
+  margin-bottom: 9px !important;
 }
 /* datewise attendance styles */
 .datewise_Container {
