--- a/src/components/UserDetail/styles.css
+++ b/src/components/UserDetail/styles.css
@@ -107,6 +107,13 @@
   justify-content: center;
   align-items: center;
 }
+.userdetail_breakSpinContainer {
+  height: 45vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.7;
+}
 .userproductivity_topContainers {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   padding: 12px 12px;
