--- a/src/components/Settings/styles.css
+++ b/src/components/Settings/styles.css
@@ -420,6 +420,9 @@
   border-right: 1px solid #00000026;
   border-radius: 12px;
   padding: 0px 9px;
+  height: 100vh;
+  overflow: auto;
+  position: relative;
 }
 .category_nameContainer {
   display: flex;
@@ -460,6 +463,7 @@
   background-color: #25a17d;
   color: white;
   font-weight: 600;
+  cursor: default;
 }
 .category_neutralproductivebutton {
   padding: 3px 0px;
@@ -473,6 +477,7 @@
   background-color: #8a8c8c;
   color: white;
   font-weight: 600;
+  cursor: default;
 }
 .category_unproductivebutton {
   padding: 3px 0px;
@@ -486,6 +491,12 @@
   background-color: rgba(244, 67, 54, 0.85);
   color: white;
   font-weight: 600;
+  cursor: default;
+}
+.settingsproductivity_spinContainer {
+  position: absolute;
+  top: 40%;
+  left: 50%;
 }
 /* mapping styles */
 .mapping_headerselectfieldsColumnContainer {
