--- a/src/components/Common/commonstyles.css
+++ b/src/components/Common/commonstyles.css
@@ -125,7 +125,7 @@
   border-radius: 4px;
   transition: "background" 0.2s;
   color: #fff;
-  background: #1677ff;
+  background: #25a17d;
 }
 /* loader styles */
 .lottieloader_container {
