--- a/src/index.css
+++ b/src/index.css
@@ -98,34 +98,33 @@ select:focus {
   color: #25a17d !important;
   border-color: #25a17d !important;
 }
-/* .ant-btn-default:not(:disabled):not(.ant-btn-disabled):hover {
-  border-color: #25a17d !important;
-} */
 .ant-picker-header-view button:hover {
   color: #25a17d !important;
 }
+
 /* antd datepicker styles */
 .ant-picker-cell-in-view.ant-picker-cell-selected .ant-picker-cell-inner {
   background: #25a17d !important;
 }
-:where(
-    .css-dev-only-do-not-override-1c0na6j
-  ).ant-picker-outlined.ant-picker-status-error:not(
-    .ant-picker-disabled
-  ):hover {
+.ant-picker-outlined:hover {
+  border-color: #25a17d !important;
+}
+.ant-picker-outlined.ant-picker-status-error:not(.ant-picker-disabled):hover {
   border-color: #ff7875 !important;
 }
-:where(
-    .css-dev-only-do-not-override-1c0na6j
-  ).ant-picker-outlined.ant-picker-status-error:not(
+.ant-picker-outlined:focus {
+  border-color: #25a17d !important;
+  box-shadow: 0 0 0 2px #25a17e1e !important;
+}
+.ant-picker-outlined:focus-within {
+  border-color: #25a17d !important;
+  box-shadow: 0 0 0 2px #25a17e1e !important;
+}
+.ant-picker-outlined.ant-picker-status-error:not(
     .ant-picker-disabled
   ):focus-within {
   border-color: #ff7875 !important;
   box-shadow: 0 0 0 2px rgba(255, 38, 5, 0.06) !important;
-}
-:where(.css-dev-only-do-not-override-1c0na6j).ant-picker-outlined:focus-within {
-  border-color: #25a17d !important;
-  box-shadow: 0 0 0 2px #25a17e17 !important;
 }
 /* ant double datepicker styles */
 .ant-picker-range .ant-picker-active-bar {
@@ -155,13 +154,6 @@ select:focus {
   background: #25a17e13 !important;
 }
 
-/* antd calendar */
-.ant-select-outlined:not(.ant-select-disabled):not(
-    .ant-select-customize-input
-  ):not(.ant-pagination-size-changer):hover
-  .ant-select-selector {
-  border-color: #25a17d !important;
-}
 /* tab color change */
 .ant-tabs-ink-bar {
   border-bottom: 2px solid #25a17d;
@@ -210,6 +202,7 @@ select:focus {
 .ant-pagination .ant-pagination-item-active a {
   color: #009737 !important;
 }
+
 /* primary button styles */
 .ant-btn-primary {
   color: #fff;
@@ -233,46 +226,20 @@ select:focus {
   transform: scale(0.9);
   box-shadow: 3px 2px 22px 1px rgba(85, 226, 108, 0.507);
 }
+
 /* antd pagination select */
 .ant-pagination
   .ant-pagination-options-size-changer:hover
   .ant-select-selector {
   border-color: #25a17d !important;
 }
-/* .ant-select-focused:not(.ant-select-disabled):not(
-    .ant-select-customize-input
-  ):not(.ant-pagination-size-changer)
-  .ant-select-selector {
-  border-color: #25a17d !important;
-  box-shadow: 0 0 0 2px #25a17e17 !important;
-  outline: 0;
-} */
-.ant-select-focused:where(
-    .css-dev-only-do-not-override-1c0na6j
-  ).ant-select-outlined.ant-select-status-error:not(.ant-select-disabled):not(
+.ant-select-outlined.ant-select-status-error:not(.ant-select-disabled):not(
     .ant-select-customize- input
   ):not(.ant-pagination-size-changer)
   .ant-select-selector {
   border-color: #ff7875 !important;
   box-shadow: 0 0 0 2px rgba(255, 38, 5, 0.06) !important;
 }
-
-/* .ant-select-focused:where(
-    .css-dev-only-do-not-override-1c0na6j
-  ).ant-select-outlined:not(.ant-select-disabled):not(
-    .ant-select-customize-input
-  ):not(.ant-pagination-size-changer)
-  .ant-select-selector {
-  border-color: #25a17d !important;
-  box-shadow: 0 0 0 2px #25a17e17 !important;
-}
-.ant-select-focused:where(.css-1hsrsde).ant-select:not(.ant-select-disabled)
-  :not(.ant-select-customize- input):not(.ant-pagination-size-changer)
-  .ant-select-selector {
-  border-color: #25a17d !important;
-} */
-
-/* Focused state */
 .ant-select-focused.ant-select:not(.ant-select-disabled):not(
     .ant-select-customize-input
   ):not(.ant-pagination-size-changer)
@@ -280,23 +247,26 @@ select:focus {
   border-color: #25a17d !important;
   box-shadow: 0 0 0 2px #25a17e17 !important;
 }
-
 .ant-table-wrapper .ant-table-pagination.ant-pagination {
   margin: 16px 12px !important;
 }
+
 /* drag and drop image upload styles */
 .ant-upload-wrapper .ant-upload-drag:not(.ant-upload-disabled):hover {
   border-color: #25a17d !important;
 }
+
 /* antd table spin */
 .ant-spin .ant-spin-dot-item {
   background: #25a17d !important;
 }
+
 /* antd empty image description */
 .ant-empty-description {
   font-weight: 500 !important;
   font-family: "Poppins", sans-serif !important;
 }
+
 /* antd skeleton styles */
 .ant-skeleton-title {
   border-radius: 12px !important;
