--- a/src/components/Attendance/styles.css
+++ b/src/components/Attendance/styles.css
@@ -1,13 +1,12 @@
 .summary_container {
   display: flex;
-  justify-content: space-between;
-  /* background-color: #cfd8dc; */
+  justify-content: flex-end;
   border-radius: 6px;
-  padding: 4px;
 }
 @media (min-width: 300px) and (max-width: 768px) {
   .summary_container {
     margin-top: 20px;
+    justify-content: flex-start !important;
   }
 }
 .attendance_summarybutton {
@@ -26,7 +25,7 @@
   font-weight: 600;
   overflow: hidden;
   text-overflow: ellipsis;
-  padding: 0px 12px;
+  margin: 0px 6px;
 }
 .attendance_activesummarybutton:hover {
   background-color: #25a17d !important;
