--- a/src/components/Settings/styles.css
+++ b/src/components/Settings/styles.css
@@ -550,3 +550,6 @@
   margin-bottom: 9px;
   font-size: 16px;
 }
+.maplisttable_selectfield:hover .ant-select-selector {
+  border-color: #25a17d !important;
+}
