--- a/src/components/UserDetail/styles.css
+++ b/src/components/UserDetail/styles.css
@@ -62,6 +62,12 @@
     height: 40px;
   }
 }
+@media (min-width: 1024px) and (max-width: 1196px) {
+  .userdetail_avatar {
+    width: 50px;
+    height: 50px;
+  }
+}
 .userdetail_calendarContainer {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   height: 100%;
