--- a/src/components/Settings/styles.css
+++ b/src/components/Settings/styles.css
@@ -553,3 +553,12 @@
 .maplisttable_selectfield:hover .ant-select-selector {
   border-color: #25a17d !important;
 }
+.productivityrules_inbuildtableContainer {
+  /* border-left: 1px solid #00000026;
+  border-right: 1px solid #00000026;
+  border-radius: 12px; */
+  /* padding: 0px 9px; */
+  height: 100vh;
+  overflow: auto;
+  position: relative;
+}
