alert rules api integration completed

--- a/src/components/Settings/styles.css
+++ b/src/components/Settings/styles.css
@@ -562,3 +562,7 @@
   overflow: auto;
   position: relative;
 }
+.setting_alertrules_heading {
+  font-weight: 600 !important;
+  font-size: 17px;
+}
