--- a/src/components/Common/commonstyles.css
+++ b/src/components/Common/commonstyles.css
@@ -128,6 +128,19 @@
   color: #fff;
   background: #25a17d;
 }
+.commoncalendar_selecteddate {
+  border-radius: 4px; /* Make it a circle */
+  border: 1px solid #25a17d;
+  position: relative;
+  z-index: 2;
+  display: inline-block;
+  min-width: 24px;
+  height: 24px;
+  line-height: 24px;
+  transition: "background" 0.2s;
+  background: transparent;
+}
+
 /* loader styles */
 .lottieloader_container {
   display: flex;
