--- a/src/index.css
+++ b/src/index.css
@@ -298,3 +298,16 @@ select:focus {
 .ant-timeline .ant-timeline-item {
   padding-bottom: 40px !important;
 }
+/* antd checkbox styles */
+.ant-checkbox-checked .ant-checkbox-inner {
+  /* background-color: #25a17d; */
+  border-color: #25a17d;
+}
+.ant-checkbox-wrapper:hover .ant-checkbox-checked .ant-checkbox-inner {
+  background-color: #25a17d !important;
+}
+.ant-checkbox-wrapper:hover .ant-checkbox-inner,
+.ant-checkbox:hover .ant-checkbox-inner,
+.ant-checkbox-input:focus + .ant-checkbox-inner {
+  border-color: #25a17d !important;
+}
