--- a/src/index.css
+++ b/src/index.css
@@ -300,7 +300,6 @@ select:focus {
 }
 /* antd checkbox styles */
 .ant-checkbox-checked .ant-checkbox-inner {
-  /* background-color: #25a17d; */
   border-color: #25a17d;
 }
 .ant-checkbox-wrapper:hover .ant-checkbox-checked .ant-checkbox-inner {
@@ -309,5 +308,10 @@ select:focus {
 .ant-checkbox-wrapper:hover .ant-checkbox-inner,
 .ant-checkbox:hover .ant-checkbox-inner,
 .ant-checkbox-input:focus + .ant-checkbox-inner {
-  border-color: #25a17d !important;
+  border-color: #25a17d;
+}
+.ant-checkbox-wrapper-disabled:hover
+  .ant-checkbox-disabled
+  .ant-checkbox-inner {
+  border-color: #d9d9d9 !important;
 }
