--- a/src/Components/Manual Time/styles.css
+++ b/src/Components/Manual Time/styles.css
@@ -6,7 +6,9 @@
   justify-content: center;
   align-items: center;
   margin-top: 20px;
+  max-height: 80vh;
+  overflow: hidden;
 }
 .manualtime_attachment {
-  width: 140px;
+  width: 240px;
 }
