--- a/src/index.css
+++ b/src/index.css
@@ -320,3 +320,10 @@ select:focus {
   .ant-checkbox-inner {
   border-color: #d9d9d9 !important;
 }
+/* antd slider styles */
+.ant-slider:hover .ant-slider-handle::after {
+  box-shadow: 0 0 0 3px #abb3b3 !important;
+}
+.ant-slider-horizontal .ant-slider-rail {
+  border-radius: 12px;
+}
