--- a/src/components/Settings/styles.css
+++ b/src/components/Settings/styles.css
@@ -598,8 +598,11 @@
 /* settings workplace style */
 .settings_workplaceheading {
   font-weight: 600 !important;
-  margin-bottom: 52px;
-  font-size: 15px;
+  margin-bottom: 16px;
+  font-size: 17px;
+}
+.settings_workplacecontent {
+  margin-bottom: 54px;
 }
 .custom-slider .ant-slider-tooltip .ant-tooltip-arrow {
   display: none;
@@ -631,4 +634,34 @@
   background-color: #25a17d;
   border-radius: 50%;
   margin-right: 5px;
+}
+.workplace_overburnedtooltipCircle {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background-color: rgba(37, 143, 161, 0.9);
+  border-radius: 50%;
+  margin-right: 5px;
+}
+.workplace_detailsContainer {
+  display: flex;
+  margin-top: 20px;
+  align-items: center;
+}
+.workplace_savechangesbutton {
+  color: #fff;
+  background-color: #25a17d;
+  box-shadow: 0 2px 0 rgba(88, 5, 255, 0.06);
+  font-size: 14px;
+  height: 32px;
+  width: 130px;
+  border-radius: 6px;
+  margin-top: 32px;
+}
+.workplace_savechangesbutton:hover {
+  background-color: #009737;
+}
+.workplace_savechangesbutton:active {
+  transform: scale(0.9);
+  box-shadow: 3px 2px 22px 1px rgba(85, 226, 108, 0.507);
 }
