--- a/src/components/UserDetail/styles.css
+++ b/src/components/UserDetail/styles.css
@@ -119,6 +119,9 @@
   color: rgba(128, 128, 128, 0.774);
   font-weight: 500;
 }
+.userattendance_niltext {
+  font-size: 14px;
+}
 .userbreak_linechartContainer {
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
   padding: 12px 12px;
