--- a/src/components/Analytics/styles.css
+++ b/src/components/Analytics/styles.css
@@ -7,6 +7,11 @@
   font-weight: 700;
   margin-top: 7px;
 }
+.wellness_largeemployeename {
+  font-size: 17px;
+  font-weight: 700;
+  margin-top: 9px;
+}
 .wellness_employeeactivetime {
   margin-top: 10px;
 }
